<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backdrop"
    android:padding="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/signin_nav"
        android:gravity="center_horizontal">
        <View
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:background="@drawable/bar"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_google"
        android:id="@+id/panel_signin_title"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/semibold"
        android:layout_below="@id/signin_nav"
        />
   <com.google.android.gms.common.SignInButton
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/panel_signin_btn"
       app:colorScheme="dark"
       android:layout_below="@id/panel_signin_title">

   </com.google.android.gms.common.SignInButton>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="15dp"
        android:layout_below="@id/panel_signin_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/others"
            android:textColor="@color/textlightColor"
            android:layout_marginTop="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:id="@+id/panel_signin_option_pripoli">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/panel_signin_option_termcon">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/panel_signin_option_contact">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>