<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backdrop"
    android:padding="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/account_nav"
        android:gravity="center_horizontal">
        <View
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:background="@drawable/bar"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_nav"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        android:id="@+id/account_profile">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/pic"
            android:id="@+id/panel_account_profile"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ananth Haniman"
                android:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:layout_marginLeft="12dp"
                android:id="@+id/panel_account_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="haniman@email.com"
                android:fontFamily="@font/regular"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:layout_marginLeft="12dp"
                android:id="@+id/panel_account_email"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_profile"
        android:padding="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/general"
            android:textColor="@color/textlightColor"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:id="@+id/panel_account_option_fevlist">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_list"
            app:fontFamily="@font/semibold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/rightarrow"
            android:layout_alignParentRight="true"
            android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/panel_account_option_artbook">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_bookmark"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/others"
            android:textColor="@color/textlightColor"
            android:layout_marginTop="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:id="@+id/panel_account_option_pripoli">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/panel_account_option_termcon">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/panel_account_option_contact">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                app:fontFamily="@font/semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/panel_account_option_signout"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                app:fontFamily="@font/bold"
                android:textColor="#CA0707"
                android:textSize="17sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow"
                android:layout_alignParentRight="true"
                android:tint="#CA0707"/>

        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>